Added read and write operation using set and get commands to persist data to Datafile